--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,75 +1,75 @@
 {
 	"compilerOptions": {
-		/* Visit https://aka.ms/tsconfig.json to read more about this file */
+		/* 访问 https://aka.ms/tsconfig.json 了解更多关于此文件的信息 */
 
-		/* Basic Options */
-		// "incremental": true,                   /* Enable incremental compilation */
-		"target": "esnext" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
-		"module": "esnext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
-		"lib": ["esnext", "dom", "dom.iterable", "scripthost"] /* Specify library files to be included in the compilation. */,
-		// "allowJs": true,                       /* Allow javascript files to be compiled. */
-		// "checkJs": true,                       /* Report errors in .js files. */
-		"jsx": "preserve" /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */,
-		// "declaration": true /* Generates corresponding '.d.ts' file. */,
-		// "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
-		// "sourceMap": true,                     /* Generates corresponding '.map' file. */
-		// "outFile": "./",                       /* Concatenate and emit output to single file. */
-		// "outDir": "./",                        /* Redirect output structure to the directory. */
-		// "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
-		// "composite": true,                     /* Enable project compilation */
-		// "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
-		// "removeComments": true,                /* Do not emit comments to output. */
-		// "noEmit": true,                        /* Do not emit outputs. */
-		// "importHelpers": true /* Import emit helpers from 'tslib'. */,
-		// "downlevelIteration": true /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */,
-		"isolatedModules": true /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */,
+		/* 基本选项 */
+		// "incremental": true,                   /* 启用增量编译 */
+		"target": "esnext" /* 指定 ECMAScript 目标版本: 'ES3' (默认), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 或 'ESNEXT' */,
+		"module": "esnext" /* 指定模块代码生成: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', 或 'ESNext' */,
+		"lib": ["esnext", "dom", "dom.iterable", "scripthost"] /* 指定要包含在编译中的库文件 */,
+		// "allowJs": true,                       /* 允许编译 javascript 文件 */
+		// "checkJs": true,                       /* 报告 .js 文件中的错误 */
+		"jsx": "preserve" /* 指定 JSX 代码生成: 'preserve', 'react-native', 或 'react' */,
+		// "declaration": true /* 生成相应的 '.d.ts' 文件 */,
+		// "declarationMap": true,                /* 为每个相应的 '.d.ts' 文件生成源映射 */
+		// "sourceMap": true,                     /* 生成相应的 '.map' 文件 */
+		// "outFile": "./",                       /* 连接并将输出发送到单个文件 */
+		// "outDir": "./",                        /* 将输出结构重定向到目录 */
+		// "rootDir": "./",                       /* 指定输入文件的根目录。用于通过 --outDir 控制输出目录结构 */
+		// "composite": true,                     /* 启用项目编译 */
+		// "tsBuildInfoFile": "./",               /* 指定文件以存储增量编译信息 */
+		// "removeComments": true,                /* 不向输出发出注释 */
+		// "noEmit": true,                        /* 不发出输出 */
+		// "importHelpers": true /* 从 'tslib' 导入发出助手 */,
+		// "downlevelIteration": true /* 在针对 'ES5' 或 'ES3' 时，为 'for-of'、spread 和 destructuring 中的可迭代对象提供完全支持 */,
+		"isolatedModules": true /* 将每个文件作为单独的模块进行转译（类似于 'ts.transpileModule'） */,
 
-		/* Strict Type-Checking Options */
-		"strict": true /* Enable all strict type-checking options. */,
-		// "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
-		// "strictNullChecks": true,              /* Enable strict null checks. */
-		// "strictFunctionTypes": true,           /* Enable strict checking of function types. */
-		// "strictBindCallApply": true,           /* Enable strict 'bind', 'call', and 'apply' methods on functions. */
-		// "strictPropertyInitialization": true,  /* Enable strict checking of property initialization in classes. */
-		// "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
-		// "alwaysStrict": true,                  /* Parse in strict mode and emit "use strict" for each source file. */
+		/* 严格类型检查选项 */
+		"strict": true /* 启用所有严格类型检查选项 */,
+		// "noImplicitAny": true,                 /* 在具有隐含 'any' 类型的表达式和声明上引发错误 */
+		// "strictNullChecks": true,              /* 启用严格的空检查 */
+		// "strictFunctionTypes": true,           /* 启用函数类型的严格检查 */
+		// "strictBindCallApply": true,           /* 启用函数上 'bind'、'call' 和 'apply' 方法的严格检查 */
+		// "strictPropertyInitialization": true,  /* 启用类中属性初始化的严格检查 */
+		// "noImplicitThis": true,                /* 在具有隐含 'any' 类型的 'this' 表达式上引发错误 */
+		// "alwaysStrict": true,                  /* 以严格模式解析并为每个源文件发出 "use strict" */
 
-		/* Additional Checks */
-		// "noUnusedLocals": true,                /* Report errors on unused locals. */
-		// "noUnusedParameters": true,            /* Report errors on unused parameters. */
-		// "noImplicitReturns": true,             /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
-		// "noUncheckedIndexedAccess": true,      /* Include 'undefined' in index signature results */
+		/* 附加检查 */
+		// "noUnusedLocals": true,                /* 报告未使用的局部变量错误 */
+		// "noUnusedParameters": true,            /* 报告未使用的参数错误 */
+		// "noImplicitReturns": true,             /* 当函数中并非所有代码路径都返回值时报告错误 */
+		// "noFallthroughCasesInSwitch": true,    /* 报告 switch 语句中 fallthrough 情况的错误 */
+		// "noUncheckedIndexedAccess": true,      /* 在索引签名结果中包含 'undefined' */
 
-		/* Module Resolution Options */
-		"moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
-		"baseUrl": "." /* Base directory to resolve non-absolute module names. */,
+		/* 模块解析选项 */
+		"moduleResolution": "node" /* 指定模块解析策略: 'node' (Node.js) 或 'classic' (TypeScript pre-1.6) */,
+		"baseUrl": "." /* 解析非绝对模块名的基目录 */,
 		"paths": {
 			"/@/*": ["src/*"]
-		} /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
-		// "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
-		// "typeRoots": [],                       /* List of folders to include type definitions from. */
-		"types": ["vite/client"] /* Type declaration files to be included in compilation. */,
-		"allowSyntheticDefaultImports": true /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */,
-		"esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
-		// "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
-		// "allowUmdGlobalAccess": true,          /* Allow accessing UMD globals from modules. */
+		} /* 一系列条目，将导入重新映射到相对于 'baseUrl' 的查找位置 */,
+		// "rootDirs": [],                        /* 根文件夹列表，其组合内容表示运行时项目的结构 */
+		// "typeRoots": [],                       /* 要包含类型定义的文件夹列表 */
+		"types": ["vite/client"] /* 要包含在编译中的类型声明文件 */,
+		"allowSyntheticDefaultImports": true /* 允许从没有默认导出的模块进行默认导入。这不影响代码发出，只是类型检查 */,
+		"esModuleInterop": true /* 通过为所有导入创建命名空间对象，实现 CommonJS 和 ES 模块之间的发出互操作性。隐含 'allowSyntheticDefaultImports' */,
+		// "preserveSymlinks": true,              /* 不解析符号链接的真实路径 */
+		// "allowUmdGlobalAccess": true,          /* 允许从模块访问 UMD 全局变量 */
 
-		/* Source Map Options */
-		// "sourceRoot": "",                      /* Specify the location where debugger should locate TypeScript files instead of source locations. */
-		// "mapRoot": "",                         /* Specify the location where debugger should locate map files instead of generated locations. */
-		// "inlineSourceMap": true,               /* Emit a single file with source maps instead of having a separate file. */
-		// "inlineSources": true,                 /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
+		/* 源映射选项 */
+		// "sourceRoot": "",                      /* 指定调试器应该定位 TypeScript 文件而不是源位置的位置 */
+		// "mapRoot": "",                         /* 指定调试器应该定位映射文件而不是生成位置的位置 */
+		// "inlineSourceMap": true,               /* 发出带有源映射的单个文件，而不是单独的文件 */
+		// "inlineSources": true,                 /* 在单个文件中与源映射一起发出源；需要设置 '--inlineSourceMap' 或 '--sourceMap' */
 
-		/* Experimental Options */
-		"experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
-		// "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
+		/* 实验性选项 */
+		"experimentalDecorators": true /* 启用对 ES7 装饰器的实验性支持 */,
+		// "emitDecoratorMetadata": true,         /* 启用为装饰器发出类型元数据的实验性支持 */
 
-		/* Advanced Options */
-		"skipLibCheck": true /* Skip type checking of declaration files. */,
-		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
+		/* 高级选项 */
+		"skipLibCheck": true /* 跳过声明文件的类型检查 */,
+		"forceConsistentCasingInFileNames": true /* 禁止对同一文件的大小写不一致引用 */,
 		"suppressImplicitAnyIndexErrors": false
 	},
-	"include": ["src/**/*.ts", "src/**/*.vue", "src/**/*.tsx", "src/**/*.d.ts"], // **Represents any directory, and * represents any file. Indicates that all files in the src directory will be compiled
-	"exclude": ["node_modules", "dist"] // Indicates the file directory that does not need to be compiled
+	"include": ["src/**/*.ts", "src/**/*.vue", "src/**/*.tsx", "src/**/*.d.ts"], // **表示任意目录，*表示任意文件。表示 src 目录下的所有文件都会被编译
+	"exclude": ["node_modules", "dist"] // 表示不需要编译的文件目录
 }
